fix: change cursor to text

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
       </div>
       <div class="flex flex-1 gap-8 px-4 my-4 md:px-8 md:my-8">
         <div class="flex flex-col w-3/4">
-          <label for="searchInput" class="sr-only">Search</label>
+          <label for="searchInput" class="sr-only">Search Box</label>
           <label
             for="searchInput"
-            class="flex items-center gap-4 px-6 py-3 transition-shadow duration-200 bg-white shadow-sm rounded-3xl hover:shadow-md focus-within:ring-2 focus-within:ring-purple"
+            class="flex items-center gap-4 px-6 py-3 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl hover:shadow-md focus-within:ring-2 focus-within:ring-purple"
           >
               <img
                 src="./assets/icons/eyeglass.svg"
