--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         /* colors */
         --color-background: #f7f7fb;
         --color-placeholder: #d9d9d9;
-        --color-purple: #4745a5;
+        --color-primary: #4745a5;
+        --color-light-primary: #7c7abe;
         --color-dark-blue: #0d163a;
-
+        --color-green: #31d3a3;
         /* fonts */
         --font-jakarta: "Plus Jakarta Sans", sans-serif;
         --font-weight-light: 300;
@@ -39,7 +40,8 @@
   </head>
   <body>
     <div class="flex w-screen h-screen bg-background font-jakarta">
-      <div
+      <!-- side section -->
+      <aside
         class="flex flex-col justify-between gap-8 py-8 text-sm font-light bg-white w-52 md:w-72 shrink-0 text-dark-blue"
       >
         <div class="flex flex-col">
@@ -118,26 +120,85 @@
             <h2>Logout</h2>
           </div>
         </div>
-      </div>
-      <div class="flex flex-1 gap-8 px-4 my-4 md:px-8 md:my-8">
-        <div class="flex flex-col w-3/4">
+      </aside>
+      <div
+        class="flex flex-row flex-1 flex-shrink-0 gap-8 px-4 my-4 md:px-8 md:my-8"
+      >
+        <div class="flex flex-col w-3/4 gap-8">
           <label for="searchInput" class="sr-only">Search Box</label>
           <label
             for="searchInput"
-            class="flex items-center gap-4 px-6 py-3 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl hover:shadow-md focus-within:ring-2 focus-within:ring-purple"
+            class="flex items-center gap-4 px-6 py-4 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl hover:shadow-md focus-within:ring-2 focus-within:ring-primary"
           >
-              <img
-                src="./assets/icons/eyeglass.svg"
-                alt="Search"
-                class="size-5"
-              />
-              <input
-                class="flex-1 w-full text-base bg-transparent placeholder:text-gray-400 focus:outline-none"
-                id="searchInput"
-                type="text"
-                placeholder="Search here..."
-              />
+            <img
+              src="./assets/icons/eyeglass.svg"
+              alt="Search"
+              class="size-5"
+            />
+            <input
+              class="flex-1 w-full text-base bg-transparent placeholder:text-gray-400 focus:outline-none"
+              id="searchInput"
+              type="text"
+              placeholder="Search here..."
+            />
           </label>
+
+          <!-- OverView Section -->
+          <section class="p-4 bg-white rounded-xl">
+            <h3 class="mb-4 text-lg font-semibold">Overview</h3>
+
+            <!-- Wallet Card -->
+            <div class="flex flex-row flex-wrap text-white">
+              <div class="flex flex-col">
+                <div
+                  class="flex flex-row items-center gap-2 p-4 bg-primary rounded-xl"
+                >
+                  <div class="p-2 rounded-full border-light-primary border-1">
+                    <svg
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        opacity="0.2"
+                        d="M24.0535 18.0667C23.4935 18.6134 23.1735 19.4 23.2535 20.24C23.3735 21.68 24.6935 22.7334 26.1335 22.7334H28.6668V24.32C28.6668 27.08 26.4135 29.3334 23.6535 29.3334H8.34683C5.58683 29.3334 3.3335 27.08 3.3335 24.32V15.3467C3.3335 12.5867 5.58683 10.3334 8.34683 10.3334H23.6535C26.4135 10.3334 28.6668 12.5867 28.6668 15.3467V17.2667H25.9735C25.2268 17.2667 24.5468 17.56 24.0535 18.0667Z"
+                        fill="white"
+                      />
+                      <path
+                        opacity="0.8"
+                        d="M19.8002 5.26671V10.3334H8.34683C5.58683 10.3334 3.3335 12.5867 3.3335 15.3467V10.4534C3.3335 8.86673 4.30683 7.45334 5.78683 6.89334L16.3735 2.89334C18.0268 2.28 19.8002 3.49338 19.8002 5.26671Z"
+                        fill="white"
+                      />
+                      <path
+                        opacity="0.8"
+                        d="M30.08 18.6267V21.3734C30.08 22.1067 29.4934 22.7067 28.7467 22.7334H26.1334C24.6934 22.7334 23.3734 21.68 23.2534 20.24C23.1734 19.4 23.4934 18.6134 24.0534 18.0667C24.5467 17.56 25.2267 17.2667 25.9734 17.2667H28.7467C29.4934 17.2934 30.08 17.8933 30.08 18.6267Z"
+                        fill="white"
+                      />
+                      <path
+                        d="M18.6668 17H9.3335C8.78683 17 8.3335 16.5467 8.3335 16C8.3335 15.4533 8.78683 15 9.3335 15H18.6668C19.2135 15 19.6668 15.4533 19.6668 16C19.6668 16.5467 19.2135 17 18.6668 17Z"
+                        fill="white"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-2">
+                    <span>Your Balance</span>
+                    <div class="flex gap-1">
+                      <img
+                        src="./assets/icons/arrow.svg"
+                        class="size-4"
+                        alt="Arrow"
+                      />
+                      <span class="text-xs opacity-60"
+                        >15 % compared with last month</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
         <div class="flex flex-col w-1/4">4</div>
       </div>
