--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@
               <h2>Team</h2>
             </div>
           </div>
+
+          <!-- Divider -->
           <div
             class="w-[60%] mx-auto border-t border-dark-blue opacity-30 my-6"
           ></div>
+
           <div>
             <div class="flex gap-4 px-16 py-4 cursor-pointer">
               <img
@@ -146,13 +149,10 @@
           <!-- OverView Section -->
           <section class="p-4 bg-white rounded-xl">
             <h3 class="mb-4 text-lg font-semibold">Overview</h3>
-
-            <!-- Wallet Card -->
-            <div class="flex flex-row flex-wrap text-white">
-              <div class="flex flex-col">
-                <div
-                  class="flex flex-row items-center gap-2 p-4 bg-primary rounded-xl"
-                >
+            <div class="flex flex-row flex-wrap gap-4 text-white">
+              <!-- Wallet Card Start-->
+              <div class="flex flex-col w-1/2 gap-2 p-6 bg-primary rounded-xl">
+                <div class="flex flex-row items-center gap-4">
                   <div class="p-2 rounded-full border-light-primary border-1">
                     <svg
                       width="32"
@@ -182,7 +182,7 @@
                       />
                     </svg>
                   </div>
-                  <div class="flex flex-col gap-2">
+                  <div class="flex flex-col gap-4">
                     <span>Your Balance</span>
                     <div class="flex gap-1">
                       <img
@@ -196,7 +196,142 @@
                     </div>
                   </div>
                 </div>
+                <!-- Divider -->
+                <div
+                  class="w-full mx-auto my-6 border-t border-white opacity-20"
+                ></div>
+                <div class="flex items-center justify-between">
+                  <span class="text-3xl">$ 28,891.138</span>
+                  <img
+                    src="./assets/icons/arrowRight.svg"
+                    class="cursor-pointer size-6"
+                    alt="Right Arrow"
+                  />
+                </div>
               </div>
+              <!-- Wallet Card End -->
+
+              <!-- Wallet Card -->
+              <div class="flex flex-col w-1/2 gap-2 p-6 bg-primary rounded-xl">
+                <div class="flex flex-row items-center gap-4">
+                  <div class="p-2 rounded-full border-light-primary border-1">
+                    <svg
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        opacity="0.2"
+                        d="M24.0535 18.0667C23.4935 18.6134 23.1735 19.4 23.2535 20.24C23.3735 21.68 24.6935 22.7334 26.1335 22.7334H28.6668V24.32C28.6668 27.08 26.4135 29.3334 23.6535 29.3334H8.34683C5.58683 29.3334 3.3335 27.08 3.3335 24.32V15.3467C3.3335 12.5867 5.58683 10.3334 8.34683 10.3334H23.6535C26.4135 10.3334 28.6668 12.5867 28.6668 15.3467V17.2667H25.9735C25.2268 17.2667 24.5468 17.56 24.0535 18.0667Z"
+                        fill="white"
+                      />
+                      <path
+                        opacity="0.8"
+                        d="M19.8002 5.26671V10.3334H8.34683C5.58683 10.3334 3.3335 12.5867 3.3335 15.3467V10.4534C3.3335 8.86673 4.30683 7.45334 5.78683 6.89334L16.3735 2.89334C18.0268 2.28 19.8002 3.49338 19.8002 5.26671Z"
+                        fill="white"
+                      />
+                      <path
+                        opacity="0.8"
+                        d="M30.08 18.6267V21.3734C30.08 22.1067 29.4934 22.7067 28.7467 22.7334H26.1334C24.6934 22.7334 23.3734 21.68 23.2534 20.24C23.1734 19.4 23.4934 18.6134 24.0534 18.0667C24.5467 17.56 25.2267 17.2667 25.9734 17.2667H28.7467C29.4934 17.2934 30.08 17.8933 30.08 18.6267Z"
+                        fill="white"
+                      />
+                      <path
+                        d="M18.6668 17H9.3335C8.78683 17 8.3335 16.5467 8.3335 16C8.3335 15.4533 8.78683 15 9.3335 15H18.6668C19.2135 15 19.6668 15.4533 19.6668 16C19.6668 16.5467 19.2135 17 18.6668 17Z"
+                        fill="white"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-4">
+                    <span>Your Balance</span>
+                    <div class="flex gap-1">
+                      <img
+                        src="./assets/icons/arrow.svg"
+                        class="size-4"
+                        alt="Arrow"
+                      />
+                      <span class="text-xs opacity-60"
+                        >15 % compared with last month</span
+                      >
+                    </div>
+                  </div>
+                </div>
+                <!-- Divider -->
+                <div
+                  class="w-full mx-auto my-6 border-t border-white opacity-20"
+                ></div>
+                <div class="flex items-center justify-between">
+                  <span class="text-3xl">$ 28,891.138</span>
+                  <img
+                    src="./assets/icons/arrowRight.svg"
+                    class="cursor-pointer size-6"
+                    alt="Right Arrow"
+                  />
+                </div>
+              </div>
+              <!-- Wallet Card End -->
+
+              <!-- Wallet Card Start-->
+              <div class="flex flex-col w-1/2 gap-2 p-6 bg-primary rounded-xl">
+                <div class="flex flex-row items-center gap-4">
+                  <div class="p-2 rounded-full border-light-primary border-1">
+                    <svg
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        opacity="0.2"
+                        d="M24.0535 18.0667C23.4935 18.6134 23.1735 19.4 23.2535 20.24C23.3735 21.68 24.6935 22.7334 26.1335 22.7334H28.6668V24.32C28.6668 27.08 26.4135 29.3334 23.6535 29.3334H8.34683C5.58683 29.3334 3.3335 27.08 3.3335 24.32V15.3467C3.3335 12.5867 5.58683 10.3334 8.34683 10.3334H23.6535C26.4135 10.3334 28.6668 12.5867 28.6668 15.3467V17.2667H25.9735C25.2268 17.2667 24.5468 17.56 24.0535 18.0667Z"
+                        fill="white"
+                      />
+                      <path
+                        opacity="0.8"
+                        d="M19.8002 5.26671V10.3334H8.34683C5.58683 10.3334 3.3335 12.5867 3.3335 15.3467V10.4534C3.3335 8.86673 4.30683 7.45334 5.78683 6.89334L16.3735 2.89334C18.0268 2.28 19.8002 3.49338 19.8002 5.26671Z"
+                        fill="white"
+                      />
+                      <path
+                        opacity="0.8"
+                        d="M30.08 18.6267V21.3734C30.08 22.1067 29.4934 22.7067 28.7467 22.7334H26.1334C24.6934 22.7334 23.3734 21.68 23.2534 20.24C23.1734 19.4 23.4934 18.6134 24.0534 18.0667C24.5467 17.56 25.2267 17.2667 25.9734 17.2667H28.7467C29.4934 17.2934 30.08 17.8933 30.08 18.6267Z"
+                        fill="white"
+                      />
+                      <path
+                        d="M18.6668 17H9.3335C8.78683 17 8.3335 16.5467 8.3335 16C8.3335 15.4533 8.78683 15 9.3335 15H18.6668C19.2135 15 19.6668 15.4533 19.6668 16C19.6668 16.5467 19.2135 17 18.6668 17Z"
+                        fill="white"
+                      />
+                    </svg>
+                  </div>
+                  <div class="flex flex-col gap-4">
+                    <span>Your Balance</span>
+                    <div class="flex gap-1">
+                      <img
+                        src="./assets/icons/arrow.svg"
+                        class="size-4"
+                        alt="Arrow"
+                      />
+                      <span class="text-xs opacity-60"
+                        >15 % compared with last month</span
+                      >
+                    </div>
+                  </div>
+                </div>
+                <!-- Divider -->
+                <div
+                  class="w-full mx-auto my-6 border-t border-white opacity-20"
+                ></div>
+                <div class="flex items-center justify-between">
+                  <span class="text-3xl">$ 28,891.138</span>
+                  <img
+                    src="./assets/icons/arrowRight.svg"
+                    class="cursor-pointer size-6"
+                    alt="Right Arrow"
+                  />
+                </div>
+              </div>
+              <!-- Wallet Card End -->
             </div>
           </section>
         </div>
