chore: start Analytics section

--- a/index.html
+++ b/index.html
@@ -497,6 +497,16 @@
               <!-- Incomes Card End -->
             </div>
           </section>
+          <!-- OverView Section End -->
+
+          <!-- Analytics Section -->
+          <section class="p-4 bg-white rounded-xl">
+            <h3 class="mb-4 text-lg font-semibold">Overview</h3>
+            
+          </section>
+          <!-- Analytics Section End -->
+
+
         </div>
         <div class="flex flex-col w-1/4">4</div>
       </div>
