feat: add navbar for profile

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       </aside>
       <!-- Side section end -->
 
+      <!-- Middle part -->
       <div
         class="flex flex-row flex-1 flex-shrink-0 gap-8 px-4 my-4 overflow-scroll md:px-8 md:my-8"
       >
@@ -135,7 +136,7 @@
           <label for="searchInput" class="sr-only">Search Box</label>
           <label
             for="searchInput"
-            class="flex items-center gap-4 px-6 py-4 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl hover:shadow-md focus-within:ring-2 focus-within:ring-primary"
+            class="flex items-center h-16 gap-4 px-6 py-4 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl hover:shadow-md focus-within:ring-2 focus-within:ring-primary"
           >
             <img
               src="./assets/icons/eyeglass.svg"
@@ -549,12 +550,119 @@
             <!-- Header end -->
 
             <!-- Chart Start -->
-            <div>Hello</div>
+            <div>Chart Goes here</div>
             <!-- Chart end -->
           </section>
           <!-- Analytics Section End -->
         </div>
-        <div class="flex flex-col w-1/4">4</div>
+        <!-- Right most part Start -->
+        <div class="flex flex-col items-center w-1/4 gap-8 text-dark-blue">
+          <div
+            class="flex items-center h-16 gap-4 px-6 py-4 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl"
+          >
+            <!-- Bell Icon -->
+            <div
+              class="relative hidden group has-tooltip lg:block"
+              title="Notifications"
+            >
+              <div
+                class="flex items-center justify-center duration-150 cursor-pointer hover:animate-pulse border-1 rounded-3xl border-placeholder group-hover:border-primary"
+              >
+                <img
+                  src="./assets/icons/bell.svg"
+                  alt="Notifications"
+                  class="mx-3 my-2 size-5 group-hover:scale-110"
+                />
+              </div>
+              <span
+                class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+              >
+                Notifications
+              </span>
+            </div>
+
+            <!-- Chat Icon -->
+            <div
+              class="relative hidden group has-tooltip lg:block"
+              title="Messages"
+            >
+              <div
+                class="flex items-center justify-center duration-150 cursor-pointer hover:animate-pulse border-1 rounded-3xl border-placeholder group-hover:border-primary"
+              >
+                <img
+                  src="./assets/icons/chat.svg"
+                  alt="Messages"
+                  class="mx-3 my-2 size-5 group-hover:scale-110"
+                />
+              </div>
+              <span
+                class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+              >
+                Messages
+              </span>
+            </div>
+
+            <!-- Gallery Icon -->
+            <div
+              class="relative hidden group has-tooltip lg:block"
+              title="Messages"
+            >
+              <div
+                class="flex items-center justify-center duration-150 cursor-pointer hover:animate-pulse border-1 bg-placeholder rounded-3xl border-placeholder group-hover:border-primary"
+              >
+                <img
+                  src="./assets/icons/gallery.svg"
+                  alt="Gallery"
+                  class="mx-3 my-2 size-5 group-hover:scale-110"
+                />
+              </div>
+              <span
+                class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+              >
+                Gallery
+              </span>
+            </div>
+
+            <!-- Profile Icon -->
+            <div class="relative group has-tooltip">
+              <div
+                class="px-3 py-2 text-white duration-150 cursor-pointer hover:animate-pulse border-1 bg-primary rounded-3xl border-placeholder group-hover:border-primary"
+              >
+                <span> RRK </span>
+                <!-- <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19.9201 8.95001L13.4001 15.47C12.6301 16.24 11.3701 16.24 10.6001 15.47L4.08008 8.95001"
+                    stroke="#fff"
+                    stroke-width="1.5"
+                    stroke-miterlimit="10"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg> -->
+              </div>
+              <span
+                class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+              >
+                Ruchi Raj Karki
+              </span>
+            </div>
+          </div>
+          <section class="bg-white">
+            <!-- Saving plan card start -->
+            <div class="flex flex-row justify-between">
+              <h3 class="mb-4 text-lg font-semibold">Saving Plan</h3>
+              <a href="#" class="text-primrary">See All</a>
+            </div>
+            <!-- Saving plan card end -->
+          </section>
+        </div>
+        <!-- Right most part end -->
       </div>
     </div>
     <script src="index.js"></script>
