--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <label for="searchInput" class="sr-only">Search Box</label>
           <label
             for="searchInput"
-            class="flex items-center h-16 gap-4 px-6 py-4 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl hover:shadow-md focus-within:ring-2 focus-within:ring-primary"
+            class="flex items-center h-16 gap-4 px-6 py-4 mt-2 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl hover:shadow-md focus-within:ring-2 focus-within:ring-primary"
           >
             <img
               src="./assets/icons/eyeglass.svg"
@@ -558,7 +558,7 @@
         <!-- Right most part Start -->
         <div class="flex flex-col items-center w-1/4 gap-8 text-dark-blue">
           <div
-            class="flex items-center h-16 gap-4 px-6 py-4 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl"
+            class="flex items-center h-16 gap-4 px-6 py-4 mt-2 transition-shadow duration-200 bg-white shadow-sm cursor-text rounded-3xl"
           >
             <!-- Bell Icon -->
             <div
@@ -653,12 +653,120 @@
               </span>
             </div>
           </div>
-          <section class="bg-white">
+          <section class="w-full p-4 bg-white">
             <!-- Saving plan card start -->
             <div class="flex flex-row justify-between">
               <h3 class="mb-4 text-lg font-semibold">Saving Plan</h3>
               <a href="#" class="text-primrary">See All</a>
             </div>
+
+            <!-- Divider -->
+            <div
+              class="w-full mx-auto my-4 border-t border-dark-blue opacity-10"
+            ></div>
+
+            <!-- Plan List start -->
+            <div class="flex flex-col gap-8">
+              <!-- plan1 -->
+              <div class="flex flex-col gap-4">
+                <div class="flex gap-8 justofy-between">
+                  <h4 class="text-sm">Bali Vacation</h4>
+                  <span class="text-xs opacity-50">Target: August 25 2022</span>
+                </div>
+                <div class="flex justify-between">
+                  <span class="text-xl font-semibold"
+                    >$ 1950,21
+                    <span class="text-xs font-medium opacity-60"
+                      >/ $ 4000</span
+                    ></span
+                  >
+                  <span>48%</span>
+                </div>
+                <div class="w-full text-center bg-red-100">
+                  <svg
+                    viewBox="0 0 299 9"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <rect width="299" height="8" rx="4" fill="#DEDEDE" />
+                    <rect
+                      y="0.5"
+                      width="146.51"
+                      height="8"
+                      rx="4"
+                      fill="#4745A4"
+                    />
+                  </svg>
+                </div>
+              </div>
+
+              <!-- plan2 -->
+              <div class="flex flex-col gap-4">
+                <div class="flex gap-8 justofy-between">
+                  <h4 class="text-sm">New Gadget</h4>
+                  <span class="text-xs opacity-50">Target: August 25 2022</span>
+                </div>
+                <div class="flex justify-between">
+                  <span class="text-xl font-semibold"
+                    >$ 790,21
+                    <span class="text-xs font-medium opacity-60"
+                      >/ $ 1000</span
+                    ></span
+                  >
+                  <span class="text-[#F9BA33]">79%</span>
+                </div>
+                <div class="w-full text-center bg-red-100">
+                  <svg
+                    viewBox="0 0 299 9"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <rect width="299" height="8" rx="4" fill="#DEDEDE" />
+                    <rect
+                      y="0.333984"
+                      width="236.943"
+                      height="8"
+                      rx="4"
+                      fill="#F9BA33"
+                    />
+                  </svg>
+                </div>
+              </div>
+
+              <!-- plan3 -->
+              <div class="flex flex-col gap-4">
+                <div class="flex gap-8 justofy-between">
+                  <h4 class="text-sm">Charity</h4>
+                  <span class="text-xs opacity-50">Target: August 25 2022</span>
+                </div>
+                <div class="flex justify-between">
+                  <span class="text-xl font-semibold"
+                    >$ 32,111
+                    <span class="text-xs font-medium opacity-60"
+                      >/ $ 100</span
+                    ></span
+                  >
+                  <span class="text-[#3BBB6E]">32%</span>
+                </div>
+                <div class="w-full text-center bg-red-100">
+                  <svg
+                    viewBox="0 0 299 9"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <rect width="299" height="8" rx="4" fill="#DEDEDE" />
+                    <rect
+                      y="0.666016"
+                      width="92.1447"
+                      height="8"
+                      rx="4"
+                      fill="#3BBB6E"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <!-- Plan List end -->
             <!-- Saving plan card end -->
           </section>
         </div>
