feat: finish recenbt transactions

--- a/index.html
+++ b/index.html
@@ -804,45 +804,163 @@
             <div
               class="w-full mx-auto my-4 border-t border-dark-blue opacity-10"
             ></div>
-            <!-- plan1 -->
-            <div class="flex flex-col gap-4">
-              <div class="flex gap-8 justofy-between">
-                <h4 class="text-sm">Bali Vacation</h4>
-                <span class="text-xs opacity-50">Target: August 25 2022</span>
-              </div>
-              <div class="flex justify-between">
-                <span class="text-xl font-semibold"
-                  >$ 1950,21
-                  <span class="text-xs font-medium opacity-60"
-                    >/ $ 4000</span
-                  ></span
-                >
-                <span>48%</span>
-              </div>
-              <div class="w-full text-center">
-                <!-- Gallery Icon -->
 
-                <div
-                  class="relative hidden group has-tooltip lg:block"
-                  title="Messages"
-                >
+            <!-- Transaction 1 -->
+            <div class="flex flex-col gap-4 mb-8">
+              <div class="flex items-center justify-between w-full text-center">
+                <div class="flex items-center gap-3">
+                  <!-- Gallery Icon -->
                   <div
-                    class="flex items-center justify-center duration-150 cursor-pointer hover:animate-pulse border-1 bg-placeholder rounded-3xl border-placeholder group-hover:border-primary"
+                    class="relative hidden group has-tooltip lg:block"
+                    title="Messages"
                   >
-                    <img
-                      src="./assets/icons/gallery.svg"
-                      alt="Gallery"
-                      class="mx-3 my-2 size-5 group-hover:scale-110"
-                    />
+                    <div
+                      class="flex items-center justify-center duration-150 cursor-pointer hover:animate-pulse border-1 bg-placeholder rounded-3xl border-placeholder group-hover:border-primary"
+                    >
+                      <img
+                        src="./assets/icons/gallery.svg"
+                        alt="Gallery"
+                        class="mx-3 my-3 size-5 group-hover:scale-110"
+                      />
+                    </div>
+                    <span
+                      class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+                    >
+                      Figma Icon
+                    </span>
                   </div>
-                  <span
-                    class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+                  <div class="flex flex-col items-start gap-1">
+                    <h4 class="font-medium text-md">Figma</h4>
+                    <span class="text-xs opacity-50">August 25, 2022</span>
+                  </div>
+                </div>
+                <div class="flex flex-col">
+                  <span class="font-medium">$ 100</span>
+                  <span class="text-[#3BBB6E] text-xs font-medium"
+                    >Complete</span
                   >
-                    Gallery
-                  </span>
                 </div>
               </div>
             </div>
+            <!-- Transaction 1 end-->
+
+            <!-- Transaction 2 -->
+            <div class="flex flex-col gap-4 mb-8">
+              <div class="flex items-center justify-between w-full text-center">
+                <div class="flex items-center gap-3">
+                  <!-- Gallery Icon -->
+                  <div
+                    class="relative hidden group has-tooltip lg:block"
+                    title="Messages"
+                  >
+                    <div
+                      class="flex items-center justify-center duration-150 cursor-pointer hover:animate-pulse border-1 bg-placeholder rounded-3xl border-placeholder group-hover:border-primary"
+                    >
+                      <img
+                        src="./assets/icons/gallery.svg"
+                        alt="Gallery"
+                        class="mx-3 my-3 size-5 group-hover:scale-110"
+                      />
+                    </div>
+                    <span
+                      class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+                    >
+                      Youtube Icon
+                    </span>
+                  </div>
+                  <div class="flex flex-col items-start gap-1">
+                    <h4 class="font-medium text-md">Youtube</h4>
+                    <span class="text-xs opacity-50">August 20, 2022</span>
+                  </div>
+                </div>
+                <div class="flex flex-col">
+                  <span class="font-medium">$ 120</span>
+                  <span class="text-[#3BBB6E] text-xs font-medium"
+                    >Complete</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- Transaction 2 end-->
+
+            <!-- Transaction 3 -->
+            <div class="flex flex-col gap-4 mb-8">
+                <div class="flex items-center justify-between w-full text-center">
+                  <div class="flex items-center gap-3">
+                    <!-- Gallery Icon -->
+                    <div
+                      class="relative hidden group has-tooltip lg:block"
+                      title="Messages"
+                    >
+                      <div
+                        class="flex items-center justify-center duration-150 cursor-pointer hover:animate-pulse border-1 bg-placeholder rounded-3xl border-placeholder group-hover:border-primary"
+                      >
+                        <img
+                          src="./assets/icons/gallery.svg"
+                          alt="Gallery"
+                          class="mx-3 my-3 size-5 group-hover:scale-110"
+                        />
+                      </div>
+                      <span
+                        class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+                      >
+                        Spotify Icon
+                      </span>
+                    </div>
+                    <div class="flex flex-col items-start gap-1">
+                      <h4 class="font-medium text-md">Spotify</h4>
+                      <span class="text-xs opacity-50">August 20, 2022</span>
+                    </div>
+                  </div>
+                  <div class="flex flex-col">
+                    <span class="font-medium">$ 15</span>
+                    <span class="text-[#3BBB6E] text-xs font-medium"
+                      >Complete</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <!-- Transaction 3 end-->
+
+              <!-- Transaction 4 -->
+            <div class="flex flex-col gap-4 mb-8">
+                <div class="flex items-center justify-between w-full text-center">
+                  <div class="flex items-center gap-3">
+                    <!-- Gallery Icon -->
+                    <div
+                      class="relative hidden group has-tooltip lg:block"
+                      title="Messages"
+                    >
+                      <div
+                        class="flex items-center justify-center duration-150 cursor-pointer hover:animate-pulse border-1 bg-placeholder rounded-3xl border-placeholder group-hover:border-primary"
+                      >
+                        <img
+                          src="./assets/icons/gallery.svg"
+                          alt="Gallery"
+                          class="mx-3 my-3 size-5 group-hover:scale-110"
+                        />
+                      </div>
+                      <span
+                        class="absolute hidden px-2 py-1 text-xs text-white -translate-x-1/2 rounded bg-dark-blue whitespace-nowrap left-1/2 -bottom-8 group-hover:inline-block"
+                      >
+                        Freepik Icon
+                      </span>
+                    </div>
+                    <div class="flex flex-col items-start gap-1">
+                      <h4 class="font-medium text-md">Freepik</h4>
+                      <span class="text-xs opacity-50">August 20, 2022</span>
+                    </div>
+                  </div>
+                  <div class="flex flex-col">
+                    <span class="font-medium">$ 300</span>
+                    <span class="text-[#3BBB6E] text-xs font-medium"
+                      >Complete</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <!-- Transaction 4 end-->
+
           </section>
           <!-- Recent Transactions card end -->
         </div>
