--- a/index.html
+++ b/index.html
@@ -546,7 +546,10 @@
             <!-- Header end -->
 
             <!-- Chart Start -->
-            <div>Chart Goes here</div>
+            <div>
+              <!-- Chart Goes here -->
+              <canvas id="analyticsChart"></canvas>
+            </div>
             <!-- Chart end -->
           </section>
           <!-- Analytics Section End -->
@@ -966,14 +969,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <!-- Load ChartJS Library -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js"
-      integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
     <!-- Custom my JS -->
-    <script src="script.js"></script>
+    <script src="chart.js"></script>
   </body>
 </html>
