--- a/index.html
+++ b/index.html
@@ -506,14 +506,15 @@
             <div class="flex flex-row justify-between">
               <h3 class="mb-4 text-lg font-semibold">Analytics</h3>
               <div class="flex flex-row items-center gap-8">
-                <div class="flex flex-row items-center gap-3">
+                <!-- Hard COded labels -->
+                <!-- <div class="flex flex-row items-center gap-3">
                   <div class="rounded-full size-4 bg-primary"></div>
                   <span>Label 1</span>
                 </div>
                 <div class="flex flex-row items-center gap-3">
                   <div class="rounded-full size-4 bg-[#F9BA33]"></div>
                   <span>Label 2</span>
-                </div>
+                </div> -->
                 <div class="w-44">
                   <div class="relative">
                     <select
@@ -969,7 +970,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <!-- Load ChartJS Library -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
     <!-- Custom my JS -->
     <script src="chart.js"></script>
   </body>
